--- a/css/style.css
+++ b/css/style.css
@@ -98,9 +98,9 @@ nav.main {
 /* line 22, ../sass/style.scss */
 nav.main ul {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  bottom: 2px;
+  left: 2px;
+  right: 2px;
   overflow: hidden;
   *zoom: 1;
   background: #111;
