--- a/css/style.css
+++ b/css/style.css
@@ -101,38 +101,46 @@ nav.main ul {
   bottom: 0;
   left: 0;
   right: 0;
+  background: #111;
   overflow: hidden;
   *zoom: 1;
-  background: #111;
 }
 /* line 30, ../sass/style.scss */
 nav.main ul li {
-  padding: 20px;
-  color: #fff;
-  border-left: 2px solid #222;
   width: 33%;
   float: left;
   text-align: center;
+  border-left: 2px solid #222;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 39, ../sass/style.scss */
+/* line 37, ../sass/style.scss */
 nav.main ul li a {
-  text-decoration: none;
+  display: block;
+  padding: 20px;
   color: #fff;
+  text-decoration: none;
 }
 /* line 44, ../sass/style.scss */
+nav.main ul li a:hover, nav.main ul li a:focus {
+  background: #000;
+}
+/* line 48, ../sass/style.scss */
+nav.main ul li a.active {
+  background: #F0CA32;
+  color: #222;
+}
+/* line 54, ../sass/style.scss */
 nav.main ul li:nth-child(2) {
   width: 34%;
-  color: red;
 }
-/* line 49, ../sass/style.scss */
+/* line 58, ../sass/style.scss */
 nav.main ul li:first-child {
   border-left: none;
 }
 
-/* line 56, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 .page {
   position: absolute;
   left: 0;
@@ -158,7 +166,7 @@ nav.main ul li:first-child {
   -o-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 69, ../sass/style.scss */
+/* line 78, ../sass/style.scss */
 .page .content {
   position: absolute;
   left: 0;
@@ -171,19 +179,19 @@ nav.main ul li:first-child {
   font-size: 16px;
   color: #222;
 }
-/* line 81, ../sass/style.scss */
+/* line 90, ../sass/style.scss */
 .page .content h1 {
   font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
   font-size: 48px;
   margin-bottom: 20px;
   line-height: 1.2em;
 }
-/* line 88, ../sass/style.scss */
+/* line 97, ../sass/style.scss */
 .page .content p {
   line-height: 1.5em;
   margin-top: 20px;
 }
-/* line 92, ../sass/style.scss */
+/* line 101, ../sass/style.scss */
 .page .content p.introduction {
   margin-top: 0;
   font-size: 22px;
@@ -191,7 +199,7 @@ nav.main ul li:first-child {
   font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 102, ../sass/style.scss */
+/* line 111, ../sass/style.scss */
 .page .showNavigation {
   text-decoration: none;
   color: #fff;
@@ -216,17 +224,26 @@ nav.main ul li:first-child {
   -o-transition: -o-transform 0.3s;
   transition: transform 0.3s;
 }
-/* line 120, ../sass/style.scss */
+/* line 129, ../sass/style.scss */
 .page.navShown {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -o-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
 }
-/* line 123, ../sass/style.scss */
+/* line 132, ../sass/style.scss */
 .page.navShown .showNavigation {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+
+/* line 138, ../sass/style.scss */
+.tabs {
+  display: none;
+}
+/* line 141, ../sass/style.scss */
+.tabs.active {
+  display: block;
 }
