--- a/sass/style.scss
+++ b/sass/style.scss
@@ -134,7 +134,7 @@ nav.main{
 		}
 		
 		&.slideOut{
-			@include transform(0.775, 0deg, -150%, 45px, 0deg, 0deg);
+			@include transform(0.775, 0deg, 0, -150%, 0deg, 0deg);
 		}
 		
 		&.slideIn{
