--- a/css/style.css
+++ b/css/style.css
@@ -240,10 +240,10 @@ nav.main ul li:first-child {
 }
 /* line 136, ../sass/style.scss */
 .page.navShown.slideOut {
-  -webkit-transform: scale(0.775) rotate(0deg) translate(-150%, 45px) skew(0deg, 0deg);
-  -moz-transform: scale(0.775) rotate(0deg) translate(-150%, 45px) skew(0deg, 0deg);
-  -o-transform: scale(0.775) rotate(0deg) translate(-150%, 45px) skew(0deg, 0deg);
-  transform: scale(0.775) rotate(0deg) translate(-150%, 45px) skew(0deg, 0deg);
+  -webkit-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
+  -moz-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
+  -o-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
+  transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
 }
 /* line 140, ../sass/style.scss */
 .page.navShown.slideIn {
