--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,7 +13,8 @@ body{
 	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 	font-size: 24px;
 	color: #fff;
-	background: #222;
+	background: #222 url(../img/ajax-loader.gif) no-repeat center center;
+	background-size: 33px;
 }
 
 nav.main{
