--- a/css/style.css
+++ b/css/style.css
@@ -202,51 +202,35 @@ nav.main ul li:first-child {
 }
 /* line 112, ../sass/style.scss */
 .page .showNavigation {
-  text-decoration: none;
-  color: #fff;
   position: absolute;
-  bottom: 20px;
+  bottom: 10px;
   left: 20px;
-  font-size: 40px;
   z-index: 99;
   display: block;
-  width: 40px;
-  height: 40px;
-  background: rgba(0, 0, 0, 0.5);
-  text-align: center;
-  line-height: 0.75;
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.75);
+  padding: 10px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
-  -webkit-transition: -webkit-transform 0.3s;
-  -moz-transition: -moz-transform 0.3s;
-  -o-transition: -o-transform 0.3s;
-  transition: transform 0.3s;
 }
-/* line 130, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 .page.navShown {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -o-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
 }
-/* line 133, ../sass/style.scss */
-.page.navShown .showNavigation {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-/* line 137, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 .page.navShown.slideOut {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   -o-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
 }
-/* line 141, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 .page.navShown.slideIn {
   -webkit-transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
@@ -254,11 +238,11 @@ nav.main ul li:first-child {
   transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
 }
 
-/* line 147, ../sass/style.scss */
+/* line 137, ../sass/style.scss */
 .tabs {
   display: none;
 }
-/* line 150, ../sass/style.scss */
+/* line 140, ../sass/style.scss */
 .tabs.active {
   display: block;
 }
