--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,12 +2,6 @@
 @import "compass/css3";
 @import "compass/css3/transform-legacy";
 @import "compass/utilities/general/clearfix";
-@import "compass/typography/text/replacement";
-
-.first{ margin-left: 0 !important; }
-.last{ margin-right: 0 !important; }
-.top{ margin-top: 0 !important; }
-.bottom{ margin-bottom: 0 !important; }
 
 body{
 	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -17,6 +11,7 @@ body{
 	background-size: 33px;
 }
 
+// Main navigation
 nav.main{
 	font-size: 16px;
 	
@@ -63,6 +58,7 @@ nav.main{
 	}
 }
 
+// Page
 .page{
 	position: absolute;
 	left: 0;
@@ -76,43 +72,10 @@ nav.main{
 	@include transform-origin(top, center);
 	@include border-radius(5px);
 	
-	.content{
-		position: absolute;
-		left: 0;
-		right: 0;
-		top: 0;
-		bottom: 0;
-		padding: 30px 30px 80px;
-		-webkit-overflow-scrolling: touch;
-		overflow: auto;
-		font-size: 16px;
-		color: #222;
-		
-		h1{
-			font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
-			font-size: 48px;
-			margin-bottom: 20px;
-			line-height: 1.2em;
-		}
-		
-		p{
-			line-height: 1.5em;
-			margin-top: 20px;
-			
-			&.introduction{
-				margin-top: 0;
-				font-size: 22px;
-				line-height: 1.2em;
-				font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
-				color: rgba(0,0,0,0.5);
-			}
-		}
-	}
-	
 	.showNavigation{
 		position: absolute;
-		bottom: 10px;
-		left: 20px;
+		top: 20px;
+		right: 20px;
 		z-index: 99;
 		display: block;
 		cursor: pointer;
@@ -134,6 +97,41 @@ nav.main{
 	}
 }
 
+// Content styling
+.content{
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	padding: 30px 30px 80px;
+	-webkit-overflow-scrolling: touch;
+	overflow: auto;
+	font-size: 16px;
+	color: #222;
+	
+	h1{
+		font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
+		font-size: 48px;
+		margin-bottom: 20px;
+		line-height: 1.2em;
+	}
+	
+	p{
+		line-height: 1.5em;
+		margin-top: 20px;
+		
+		&.introduction{
+			margin-top: 0;
+			font-size: 22px;
+			line-height: 1.2em;
+			font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
+			color: rgba(0,0,0,0.5);
+		}
+	}
+}
+
+// Tab display
 .tabs{
 	display: none;
 	
