--- a/sass/style.scss
+++ b/sass/style.scss
@@ -74,8 +74,8 @@ nav.main{
 	
 	.showNavigation{
 		position: absolute;
-		top: 20px;
-		right: 20px;
+		bottom: 20px;
+		left: 20px;
 		z-index: 99;
 		display: block;
 		cursor: pointer;
