--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,14 @@ body {
   color: #fff;
   background: #222222 url(../img/ajax-loader.gif) no-repeat center center;
   background-size: 33px;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-/* line 15, ../sass/style.scss */
+/* line 16, ../sass/style.scss */
 nav.main {
   font-size: 16px;
 }
-/* line 18, ../sass/style.scss */
+/* line 19, ../sass/style.scss */
 nav.main ul {
   position: absolute;
   bottom: 0;
@@ -86,7 +87,7 @@ nav.main ul {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 26, ../sass/style.scss */
+/* line 27, ../sass/style.scss */
 nav.main ul li {
   width: 33%;
   float: left;
@@ -96,32 +97,37 @@ nav.main ul li {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 33, ../sass/style.scss */
+/* line 34, ../sass/style.scss */
 nav.main ul li a {
   display: block;
   padding: 20px;
   color: #fff;
   text-decoration: none;
 }
-/* line 40, ../sass/style.scss */
+/* line 41, ../sass/style.scss */
 nav.main ul li a:hover, nav.main ul li a:focus {
   background: #000;
 }
-/* line 44, ../sass/style.scss */
+/* line 45, ../sass/style.scss */
 nav.main ul li a.active {
   background: #F0CA32;
   color: #222;
 }
-/* line 50, ../sass/style.scss */
+/* line 51, ../sass/style.scss */
+nav.main ul li a.tapped, nav.main ul li a:active {
+  background: #5C8F3F;
+  color: #222;
+}
+/* line 57, ../sass/style.scss */
 nav.main ul li:nth-child(2) {
   width: 34%;
 }
-/* line 54, ../sass/style.scss */
+/* line 61, ../sass/style.scss */
 nav.main ul li:first-child {
   border-left: none;
 }
 
-/* line 62, ../sass/style.scss */
+/* line 69, ../sass/style.scss */
 .page {
   position: absolute;
   left: 0;
@@ -147,7 +153,7 @@ nav.main ul li:first-child {
   -o-border-radius: 5px;
   border-radius: 5px;
 }
-/* line 75, ../sass/style.scss */
+/* line 82, ../sass/style.scss */
 .page .showNavigation {
   position: absolute;
   bottom: 20px;
@@ -163,21 +169,21 @@ nav.main ul li:first-child {
   -o-border-radius: 50%;
   border-radius: 50%;
 }
-/* line 87, ../sass/style.scss */
+/* line 94, ../sass/style.scss */
 .page.navShown {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -o-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
 }
-/* line 90, ../sass/style.scss */
+/* line 97, ../sass/style.scss */
 .page.navShown.slideOut {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   -o-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
 }
-/* line 94, ../sass/style.scss */
+/* line 101, ../sass/style.scss */
 .page.navShown.slideIn {
   -webkit-transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
@@ -185,7 +191,7 @@ nav.main ul li:first-child {
   transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
 }
 
-/* line 101, ../sass/style.scss */
+/* line 108, ../sass/style.scss */
 .content {
   position: absolute;
   left: 0;
@@ -198,19 +204,19 @@ nav.main ul li:first-child {
   font-size: 16px;
   color: #222;
 }
-/* line 113, ../sass/style.scss */
+/* line 120, ../sass/style.scss */
 .content h1 {
   font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
   font-size: 48px;
   margin-bottom: 20px;
   line-height: 1.2em;
 }
-/* line 120, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 .content p {
   line-height: 1.5em;
   margin-top: 20px;
 }
-/* line 124, ../sass/style.scss */
+/* line 131, ../sass/style.scss */
 .content p.introduction {
   margin-top: 0;
   font-size: 22px;
@@ -219,11 +225,11 @@ nav.main ul li:first-child {
   color: rgba(0, 0, 0, 0.5);
 }
 
-/* line 135, ../sass/style.scss */
+/* line 142, ../sass/style.scss */
 .tabs {
   display: none;
 }
-/* line 138, ../sass/style.scss */
+/* line 145, ../sass/style.scss */
 .tabs.active {
   display: block;
 }
