changed tabbar highlights to blue

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ nav.main ul li a.active {
 }
 /* line 51, ../sass/style.scss */
 nav.main ul li a.tapped, nav.main ul li a:active {
-  background: #5C8F3F;
+  background: #1A84AD;
   color: #222;
 }
 /* line 57, ../sass/style.scss */
