--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,7 +49,7 @@ nav.main{
 				
 				&.tapped,
 				&:active{
-					background: #5C8F3F;
+					background: #1A84AD;
 					color: #222;
 				}
 			}
