--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ nav.main ul li a.active {
 }
 /* line 51, ../sass/style.scss */
 nav.main ul li a.tapped, nav.main ul li a:active {
-  background: #1A84AD;
+  background: #fff;
   color: #222;
 }
 /* line 57, ../sass/style.scss */
@@ -183,15 +183,8 @@ nav.main ul li:first-child {
   -o-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
 }
-/* line 101, ../sass/style.scss */
-.page.navShown.slideIn {
-  -webkit-transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
-  -moz-transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
-  -o-transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
-  transform: scale(0.775) rotate(0deg) translate(150%, 45px) skew(0deg, 0deg);
-}
 
-/* line 108, ../sass/style.scss */
+/* line 104, ../sass/style.scss */
 .content {
   position: absolute;
   left: 0;
@@ -204,19 +197,19 @@ nav.main ul li:first-child {
   font-size: 16px;
   color: #222;
 }
-/* line 120, ../sass/style.scss */
+/* line 116, ../sass/style.scss */
 .content h1 {
   font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
   font-size: 48px;
   margin-bottom: 20px;
   line-height: 1.2em;
 }
-/* line 127, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 .content p {
   line-height: 1.5em;
   margin-top: 20px;
 }
-/* line 131, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 .content p.introduction {
   margin-top: 0;
   font-size: 22px;
@@ -225,11 +218,11 @@ nav.main ul li:first-child {
   color: rgba(0, 0, 0, 0.5);
 }
 
-/* line 142, ../sass/style.scss */
+/* line 138, ../sass/style.scss */
 .tabs {
   display: none;
 }
-/* line 145, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 .tabs.active {
   display: block;
 }
