system font testing

--- a/css/style.css
+++ b/css/style.css
@@ -195,24 +195,23 @@ nav.main ul li:first-child {
 .content h1 {
   margin-bottom: 20px;
   line-height: 1.2em;
-  font: 72px/72px -apple-system-font;
+  font: 48px/48px -apple-system-font;
   font-weight: 100;
 }
 /* line 119, ../sass/style.scss */
 .content p {
   line-height: 1.5em;
   margin-top: 20px;
+  font: 17px/21px -apple-system-font;
 }
-/* line 123, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 .content p.introduction {
   margin-top: 0;
-  font-size: 22px;
-  line-height: 1.2em;
-  font-family: "Hoefler Text", Constantia, Palatino, Georgia, serif;
-  color: rgba(0, 0, 0, 0.5);
+  font: 17px/21px -apple-system-font;
+  font-weight: bold;
 }
 
-/* line 134, ../sass/style.scss */
+/* line 133, ../sass/style.scss */
 .tabs {
   display: none;
   position: absolute;
@@ -224,7 +223,7 @@ nav.main ul li:first-child {
   overflow: auto;
   padding: 30px 30px 90px;
 }
-/* line 145, ../sass/style.scss */
+/* line 144, ../sass/style.scss */
 .tabs.active {
   display: block;
 }
