--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 6, ../sass/style.scss */
 body {
-  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-size: 24px;
+  font: 17px/21px -apple-system-font;
+  font-weight: bold;
   color: #fff;
   background: #222222 url(../img/ajax-loader.gif) no-repeat center center;
   background-size: 33px;
