--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,8 +4,8 @@
 @import "compass/utilities/general/clearfix";
 
 body{
-	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-	font-size: 24px;
+	font: 17px/21px -apple-system-font;
+	font-weight: bold;
 	color: #fff;
 	background: #222 url(../img/ajax-loader.gif) no-repeat center center;
 	background-size: 33px;
