background and border-radius fix

--- a/css/style.css
+++ b/css/style.css
@@ -64,19 +64,29 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 /* line 6, ../sass/style.scss */
+html {
+  background: #000;
+}
+
+/* line 10, ../sass/style.scss */
 body {
   font: 17px/21px -apple-system-font;
   color: #fff;
   background: #222222 url(../img/ajax-loader.gif) no-repeat center center;
   background-size: 33px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
 }
 
-/* line 15, ../sass/style.scss */
+/* line 20, ../sass/style.scss */
 nav.main {
   font-size: 16px;
 }
-/* line 18, ../sass/style.scss */
+/* line 23, ../sass/style.scss */
 nav.main ul {
   position: absolute;
   bottom: 0;
@@ -86,7 +96,7 @@ nav.main ul {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 26, ../sass/style.scss */
+/* line 31, ../sass/style.scss */
 nav.main ul li {
   width: 33%;
   float: left;
@@ -96,37 +106,37 @@ nav.main ul li {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 33, ../sass/style.scss */
+/* line 38, ../sass/style.scss */
 nav.main ul li a {
   display: block;
   padding: 20px;
   color: #fff;
   text-decoration: none;
 }
-/* line 40, ../sass/style.scss */
+/* line 45, ../sass/style.scss */
 nav.main ul li a:hover, nav.main ul li a:focus {
   background: #000;
 }
-/* line 44, ../sass/style.scss */
+/* line 49, ../sass/style.scss */
 nav.main ul li a.active {
   background: #F0CA32;
   color: #222;
 }
-/* line 50, ../sass/style.scss */
+/* line 55, ../sass/style.scss */
 nav.main ul li a.tapped, nav.main ul li a:active {
   background: #fff;
   color: #222;
 }
-/* line 56, ../sass/style.scss */
+/* line 61, ../sass/style.scss */
 nav.main ul li:nth-child(2) {
   width: 34%;
 }
-/* line 60, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 nav.main ul li:first-child {
   border-left: none;
 }
 
-/* line 68, ../sass/style.scss */
+/* line 73, ../sass/style.scss */
 .page {
   position: absolute;
   left: 0;
@@ -153,7 +163,7 @@ nav.main ul li:first-child {
   border-radius: 5px;
   -webkit-backface-visibility: hidden;
 }
-/* line 82, ../sass/style.scss */
+/* line 87, ../sass/style.scss */
 .page .showNavigation {
   position: absolute;
   bottom: 20px;
@@ -170,14 +180,14 @@ nav.main ul li:first-child {
   border-radius: 50%;
   -webkit-backface-visibility: hidden;
 }
-/* line 95, ../sass/style.scss */
+/* line 100, ../sass/style.scss */
 .page.navShown {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -o-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
 }
-/* line 98, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 .page.navShown.slideOut {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
@@ -185,25 +195,25 @@ nav.main ul li:first-child {
   transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
 }
 
-/* line 105, ../sass/style.scss */
+/* line 110, ../sass/style.scss */
 .content {
   font-size: 16px;
   color: #222;
 }
-/* line 109, ../sass/style.scss */
+/* line 114, ../sass/style.scss */
 .content h1 {
   margin-bottom: 20px;
   line-height: 1.2em;
   font: 48px/48px -apple-system-font;
   font-weight: 100;
 }
-/* line 118, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 .content p {
   line-height: 1.6em;
   margin-top: 20px;
   font-weight: normal;
 }
-/* line 123, ../sass/style.scss */
+/* line 128, ../sass/style.scss */
 .content p.introduction {
   margin-top: 0;
   font-weight: bold;
@@ -211,7 +221,7 @@ nav.main ul li:first-child {
   line-height: 1.6em;
 }
 
-/* line 133, ../sass/style.scss */
+/* line 138, ../sass/style.scss */
 .tabs {
   display: none;
   position: absolute;
@@ -224,7 +234,7 @@ nav.main ul li:first-child {
   padding: 30px 30px 90px;
   font-weight: bold;
 }
-/* line 145, ../sass/style.scss */
+/* line 150, ../sass/style.scss */
 .tabs.active {
   display: block;
 }
