--- a/css/style.css
+++ b/css/style.css
@@ -80,13 +80,14 @@ body {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
+  overflow: hidden;
 }
 
-/* line 20, ../sass/style.scss */
+/* line 21, ../sass/style.scss */
 nav.main {
   font-size: 16px;
 }
-/* line 23, ../sass/style.scss */
+/* line 24, ../sass/style.scss */
 nav.main ul {
   position: absolute;
   bottom: 0;
@@ -96,7 +97,7 @@ nav.main ul {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 31, ../sass/style.scss */
+/* line 32, ../sass/style.scss */
 nav.main ul li {
   width: 33%;
   float: left;
@@ -106,37 +107,37 @@ nav.main ul li {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/* line 38, ../sass/style.scss */
+/* line 39, ../sass/style.scss */
 nav.main ul li a {
   display: block;
   padding: 20px;
   color: #fff;
   text-decoration: none;
 }
-/* line 45, ../sass/style.scss */
+/* line 46, ../sass/style.scss */
 nav.main ul li a:hover, nav.main ul li a:focus {
   background: #000;
 }
-/* line 49, ../sass/style.scss */
+/* line 50, ../sass/style.scss */
 nav.main ul li a.active {
   background: #F0CA32;
   color: #222;
 }
-/* line 55, ../sass/style.scss */
+/* line 56, ../sass/style.scss */
 nav.main ul li a.tapped, nav.main ul li a:active {
   background: #fff;
   color: #222;
 }
-/* line 61, ../sass/style.scss */
+/* line 62, ../sass/style.scss */
 nav.main ul li:nth-child(2) {
   width: 34%;
 }
-/* line 65, ../sass/style.scss */
+/* line 66, ../sass/style.scss */
 nav.main ul li:first-child {
   border-left: none;
 }
 
-/* line 73, ../sass/style.scss */
+/* line 74, ../sass/style.scss */
 .page {
   position: absolute;
   left: 0;
@@ -163,7 +164,7 @@ nav.main ul li:first-child {
   border-radius: 5px;
   -webkit-backface-visibility: hidden;
 }
-/* line 87, ../sass/style.scss */
+/* line 88, ../sass/style.scss */
 .page .showNavigation {
   position: absolute;
   bottom: 20px;
@@ -180,14 +181,14 @@ nav.main ul li:first-child {
   border-radius: 50%;
   -webkit-backface-visibility: hidden;
 }
-/* line 100, ../sass/style.scss */
+/* line 101, ../sass/style.scss */
 .page.navShown {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   -o-transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
   transform: scale(0.775) rotate(0deg) translate(0, 45px) skew(0deg, 0deg);
 }
-/* line 103, ../sass/style.scss */
+/* line 104, ../sass/style.scss */
 .page.navShown.slideOut {
   -webkit-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
   -moz-transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
@@ -195,25 +196,25 @@ nav.main ul li:first-child {
   transform: scale(0.775) rotate(0deg) translate(0, -150%) skew(0deg, 0deg);
 }
 
-/* line 110, ../sass/style.scss */
+/* line 111, ../sass/style.scss */
 .content {
   font-size: 16px;
   color: #222;
 }
-/* line 114, ../sass/style.scss */
+/* line 115, ../sass/style.scss */
 .content h1 {
   margin-bottom: 20px;
   line-height: 1.2em;
   font: 48px/48px -apple-system-font;
   font-weight: 100;
 }
-/* line 123, ../sass/style.scss */
+/* line 124, ../sass/style.scss */
 .content p {
   line-height: 1.6em;
   margin-top: 20px;
   font-weight: normal;
 }
-/* line 128, ../sass/style.scss */
+/* line 129, ../sass/style.scss */
 .content p.introduction {
   margin-top: 0;
   font-weight: bold;
@@ -221,7 +222,7 @@ nav.main ul li:first-child {
   line-height: 1.6em;
 }
 
-/* line 138, ../sass/style.scss */
+/* line 139, ../sass/style.scss */
 .tabs {
   display: none;
   position: absolute;
@@ -234,7 +235,7 @@ nav.main ul li:first-child {
   padding: 30px 30px 90px;
   font-weight: bold;
 }
-/* line 150, ../sass/style.scss */
+/* line 151, ../sass/style.scss */
 .tabs.active {
   display: block;
 }
