--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,7 @@ body{
 	background-size: 33px;
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 	@include border-radius(5px);
+	overflow: hidden;
 }
 
 // Main navigation
